--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/spring_social?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
+spring.flyway.enabled=true
 spring.flyway.url = jdbc:mysql://localhost:3306/spring_social
 spring.flyway.table=social_schema_version
 spring.flyway.baseline-version=0
@@ -16,3 +17,5 @@ spring.security.oauth2.client.registration.google.scope=email,profile
 
 app.auth.tokenSecret=926D96C90030DD58429D2751AC1BDBBC
 app.auth.tokenExpirationMsec=864000000
+
+app.oauth2.authorizedRedirectUris=http://localhost:3000/oauth2/redirect
